--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
             <a href="https://twitter.com/ck_Brian_">Twitter</a>
         </address>
     </div>  
+                       
+
+</div>                
+<nav class="bottombar">
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/mejja.njosh/">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/brian-kennedy-njoroge-58680512a/">linkedin</a></li>
+        </ul>
+    </footer>
+</nav>
     
 </body>
 </html>
