add body content

--- a/about.html
+++ b/about.html
@@ -18,6 +18,22 @@
                 <li><a href="work.html">My Work</a></li>
             </ul>
         </header>
+    </nav> 
+    <div class="container1">
+        <img src="image/astr/me.jpg" alt="workdesk" style="width: 100%;">
+        <div class="name">Hi, I am <strong><a href="https://www.instagram.com/_.n.j.o.r.o.g.e._/">Brian Kennedy Njoroge</a></strong>, I am full-stack developer and freelance Web designer from Nairobi Kenya.
+        I have always had a passion for building stuff from scratch. As a kid I was always intrigued by the idea of being a carpenter, I thought (and still do) that carpentry is a pretty neat ocupation, I mean even Jesus was a carpenter.
+        As I grew up, I stumbled upon programming and the world of codes, and in it I found a balance between pursuing my childhood dreams and a decent occupation.
+        To that end I view coding as a 21st century form of carpentry, and I savour every moment of me creating "things" on the internet.
+        My hobbies are
+        <ul>
+            <li>Watching stand up comedy</li>
+            <li>Watching Animation</li>
+            <li>Kicking it with the boys over a game of pool table</li>
+        </ul>
+        </div>
+    <nav class="bottombar">
+        <footer>
     
 </body>
 </html>
