--- a/about.html
+++ b/about.html
@@ -34,6 +34,12 @@
         </div>
     <nav class="bottombar">
         <footer>
-    
+            <ul>
+                <li><a href="https://www.facebook.com/mejja.njosh/">Facebook</a></li>
+                <li><a href="https://www.linkedin.com/in/brian-kennedy-njoroge-58680512a/">linkedin</a></li>
+            </ul>
+        </footer>
+    </nav>         
+
 </body>
 </html>
