added my work section

--- a/work.html
+++ b/work.html
@@ -18,6 +18,35 @@
                 <li><a href="work.html">My Work</a></li>
             </ul>
         </header>
-    </nav>         
+    </nav>  
+</nav>
+<section class="work-main-section">
+    <p class="intro">Since my active coding journey begun at <a href="https://moringaschool.com/">Moringa School</a>, I have been able to complete a couple of website projects.
+        Here are a few for your viewing pleasure. Also checkout my <a href="https://github.com/BrianKennedyN">github page </a>to view my unreleased projects .</p>
+        <ul>
+            <li>
+                <div class='parent-flex-parent'>
+                    <div class='flex-child-text'>This is a website called #iko_Kazi. It is a job hunt platform where recruiter can advertise job openings to job seekers who visit the site.
+                        Click the smiley face to view the website<a href="https://briankennedyn.github.io/-iko_kAZi/"><br>
+                            😃</a>
+                    </div>
+    
+                </div>
+            </li>
+            <li>
+                <div class="parent-flex-parent2">
+                    <div class="flex-child-text2">This is a website that links creatives to event organisers. I contributed to the making of this project with my awesome colleagues and classmates Thomas Oduor, Lucy Karimi and Mercy Vugutsa.
+                        Fist bump to view this website<a href="https://luciahroyalty101.github.io/Twaweza-Youths-Empowerment-project/"><br>
+                            👊</a>
+                    </div>
+                </div>   
+
+            </li>
+        </ul>
+
+
+    </p>
+</section>     
+
 </body>
 </html>
