added the footer

--- a/work.html
+++ b/work.html
@@ -46,7 +46,14 @@
 
 
     </p>
-</section>     
+</section>  
+<nav class="bottombar">
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/mejja.njosh/">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/brian-kennedy-njoroge-58680512a/">linkedin</a></li>
+        </ul>
+    </footer>   
 
 </body>
 </html>
